# ZigbeeWaterMeter

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
hardware/libraries/: 2025-02-03_12-52-54_Library.lbr  SON_400UV-7_DIO.step  SOT563.lbr
main/: CMakeLists.txt  esp_zb_gas_meter.c  esp_zb_gas_meter.h  esp_zb_gas_meter_adc.c  esp_zb_gas_meter_adc.h  esp_zb_gas_meter_adc_zigbee.h  esp_zb_gas_meter_zigbee.c  esp_zb_gas_meter_zigbee.h  esp_zb_gas_ota.c  esp_zb_gas_ota.h  esp_zb_gas_version.h  esp_zb_water_meter.c  esp_zb_water_meter.h  esp_zb_water_meter_adc.c  esp_zb_water_meter_adc.h  esp_zb_water_meter_adc_zigbee.h  esp_zb_water_meter_zigbee.c  esp_zb_water_meter_zigbee.h  esp_zb_water_ota.c  esp_zb_water_ota.h  esp_zb_water_version.h  idf_component.yml
zigbee2mqtt/: README.md  micasa.js  midiwidi.js
